# bevy_workshop-eurorust-2025

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  deploy.yml
0-intro/: Cargo.toml  README.md
0-intro/src/: main.rs  menu.rs  splash.rs
1-dashboard/: Cargo.toml  README.md
1-dashboard/assets/shaders/: battery_bar.wgsl  music_progress.wgsl
1-dashboard/src/: battery.rs  main.rs  music.rs  odometer.rs  speed.rs  turn.rs
2-home-automation/: Cargo.toml  README.md
2-home-automation/assets/: 1np-simple.glb
2-home-automation/src/: lights.rs  main.rs  natural_time.rs  remote_server.rs
2-home-automation/src/remote_server/: internal.rs
3-car-vision/: Cargo.toml  README.md
3-car-vision/assets/: car.glb
3-car-vision/assets/kitti-2011_09_26_drive_0005_sync/velodyne/: 0000000000.laz  0000000001.laz  0000000002.laz  0000000003.laz  0000000004.laz  0000000005.laz  0000000006.laz  0000000007.laz  0000000008.laz  0000000009.laz  0000000010.laz  0000000011.laz  0000000012.laz  0000000013.laz  0000000014.laz  0000000015.laz  0000000016.laz  0000000017.laz  0000000018.laz  0000000019.laz  0000000020.laz  0000000021.laz  0000000022.laz  0000000023.laz  0000000024.laz  0000000025.laz  0000000026.laz  0000000027.laz  0000000028.laz  0000000029.laz  0000000030.laz  0000000031.laz  0000000032.laz  0000000033.laz  0000000034.laz  0000000035.laz  0000000036.laz  0000000037.laz  0000000038.laz  0000000039.laz  (+114 more)
3-car-vision/src/: cameras.rs  dataset.rs  main.rs
4-medical/: Cargo.toml  README.md
bevy-workshop/: book.toml
bevy-workshop/src/: SUMMARY.md  setup.md  welcome.md  wild.md
bevy-workshop/src/0-intro/: application.md  exercises.md  hot-patching.md  index.md  plugins.md  progress.md  start-menu.md  states.md  systems.md  updating.md
bevy-workshop/src/1-dashboard/: battery-level.md  index.md  odometer.md  progress.md  radio.md  speedometer.md  turn-signals.md  turning.md
bevy-workshop/src/1-intro/: application.md
bevy-workshop/src/2-home-automation/: current-state.md  faking-server.md  faking-time.md  home-setup.md  index.md  light-color.md  light-history.md  light-information.md  progress.md  toggling-lights.md
bevy-workshop/src/3-car-vision/: car-camera.md  controls.md  displaying-frame.md  displaying-point-cloud.md  handling-large-datasets.md  index.md  multiple-cameras.md  progress.md
bevy-workshop/src/terms/: bevy.md
