[workspace]
resolver = "3"
members = ["1-dashboard", "2-home-automation", "3-car-vision"]

# Enable small optimizations in the dev profile.
[profile.dev]
opt-level = 1
strip = "debuginfo"
debug-assertions = false
debug = false

# # Enable a large amount of optimization in the dev profile for dependencies.
# [profile.dev.package."*"]
# opt-level = 3
# strip = "debuginfo"
# debug-assertions = false
# debug = false

# Enable optimizations in the dev profile for specific dependencies.
[profile.dev.package.las]
opt-level = 3
strip = "debuginfo"
debug-assertions = false
debug = false
[profile.dev.package.laz]
opt-level = 3
strip = "debuginfo"
debug-assertions = false
debug = false
[profile.dev.package.bevy_pointcloud]
opt-level = 3
strip = "debuginfo"
debug-assertions = false
debug = false

[workspace.dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "std",
  "async_executor",
  "animation",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_post_process",
  "bevy_anti_alias",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_input_focus",
  "bevy_log",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_image",
  "bevy_mesh",
  "bevy_camera",
  "bevy_light",
  "bevy_shader",
  "bevy_sprite",
  "bevy_sprite_render",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "png",
  "jpeg",
  "reflect_auto_register",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "x11",
  "wayland",
  "zstd_rust",
  "experimental_bevy_feathers",
  "debug",
] }
crossbeam = "0.8"
bevy_egui = "0.37.0"
bevy_pointcloud = { git = "https://github.com/rlamarche/bevy_pointcloud" }
